# libbluray

cmake/: CMakeLists.txt  config.h.cm  generate_solution.bat  headers_fixup.h  libbluray.def
cmake/libs/libudfread/: libudfread.lib
src/devtools/: bdj_test.c  clpi_dump.c  mpls_dump.c
src/examples/: bd_info.c  bdsplice.c  list_titles.c
src/libbluray/: bluray.c  bluray.h
src/libbluray/bdj/: bdj.c  bdj.h
src/libbluray/decoders/: graphics_controller.c
